--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
@@ -168,7 +168,7 @@
 	
 <!-- Alert with a heading -->
 <section class="alert alert-info">
-  <h8>NEW!</h8><br>
+	<h8><strong>NEW!</strong></h8><br>
   Did you know you have the option of sharing your direct deposit banking information between Canada Pension Plan and the Canada Revenue Agency (CRA)?
 </section>
 	
