--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Confirm-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Confirm-Info.html
@@ -194,7 +194,7 @@
 <p><strong>Note:</strong> If other deductions are made to your pension, the final amount would change.</p>
 <a class="btn btn-primary" href="###">Continue</a>
 <a class="btn btn-default" href="###">Change</a>
-<a class="btn btn-default" href="###">Cancel</a>
+<a class="btn btn-default" href="###">Cancel</a><br> <br>
 
 
 <a href="#">Return to Canada Pension Plan/Old Age Security</a><br><br>
