--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/CPP/Federal-Voluntary-Tax-Confirm-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/CPP/Federal-Voluntary-Tax-Confirm-Info.html
@@ -160,14 +160,14 @@
 	<div class="col-md-6">
 		<section class="panel panel-info">
 			  <header class="panel-heading">
-			   <h5 class="panel-title">New federal voluntary tax deduction to OAS</h5>
+			   <h5 class="panel-title">New federal voluntary tax deduction to CPP</h5>
 			
 			  </header>
 			  <div class="panel-body">
 
 <table style="width:100%" cellspacing="10">
   <tr>
-    <th>Gross OAS amount each month:</th>
+    <th>Gross CPP amount each month:</th>
     <td>$14.20</td>
   </tr>
   <tr>
@@ -179,7 +179,7 @@
     <td>($1.00)</td>
   </tr>
    <tr>
-    <th>Net OAS amount each month:</th>
+    <th>Net CPP amount each month:</th>
     <td>$2.15</td>
   </tr>
    <tr>
