--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
@@ -190,7 +190,7 @@
 		</div>
 	</div>
 	  
-<a class="btn btn-primary" href="###">Continue</a>
+<a class="btn btn-primary" href="/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Confirm-Info.html">Continue</a>
 <a class="btn btn-default" href="###">Cancel</a><br><br>
 
 
