--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/CPP/Confirmation.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/CPP/Confirmation.html
@@ -163,7 +163,7 @@
 	<div class="col-md-6">
 		<section class="panel panel-info">
 			  <header class="panel-heading">
-			   <h5 class="panel-title">New federal voluntary tax deduction to CPP</h5>
+			   <h5 class="panel-title">Start federal voluntary tax deduction to CPP</h5>
 			
 			  </header>
 			  <div class="panel-body">
