--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Confirm-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Confirm-Info.html
@@ -192,7 +192,7 @@
 </div>
 
 <p><strong>Note:</strong> If other deductions are made to your pension, the final amount would change.</p>
-<a class="btn btn-primary" href="###">Continue</a>
+<a class="btn btn-primary" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Confirmation.html">Continue</a>
 <a class="btn btn-default" href="###">Change</a>
 <a class="btn btn-default" href="###">Cancel</a><br> <br>
 
