--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html
@@ -147,7 +147,6 @@
 </div>
 <section class="container">
 <a class="btn btn-default" href="#" role="button">Featured services</a>
- <a class="btn btn-default" href="#" role="button">Accessibility</a>
  <a class="btn btn-default" href="#" role="button">Help</a>  <p class="text-right">Signed in as <strong>FIRSTNAME LASTNAME</strong></p>
 
 <h1 property="name" id="wb-cont" dir="ltr">View Tax Slips</h1>
@@ -182,12 +181,12 @@
 <h3>CPP and/or OAS Tax Slips</h3>
 
 <ul>
-<li><a href="###">IA T4A (P) - Retirement / Disability / Survivor / etc...</a> - <strong><a href="###">Original / Amendment / Duplicate / Cancelled</a></strong><br>
+<li><a href="###">IA T4A (P) - Retirement / Disability / Survivor / etc...</a> - <strong>Original / Amendment / Duplicate / Cancelled</strong><br>
 Statement of Canada Pension Plan Benefits</li>
-<li><a href="###">IA T4A (OAS) - Original</a><br>
+<li><a href="###">IA T4A (OAS) - Original<br>
 Statement of Old Age Security</li>
-<li><a href="###">Reimbursement of Benefit Paid During a Previous Year</a> - <strong><a href="###">Original / Amendment / Duplicate / Cancelled</a></strong></li>
-<li><a href="###">IA NR4 - Taxable Canada Pension Plan Benefits</a> - <strong><a href="###">Original / Amendment / Duplicate / Cancelled</strong></a><br>
+<li><a href="###">Reimbursement of Benefit Paid During a Previous Year</a> - <strong>Original / Amendment / Duplicate / Cancelled</strong></li>
+<li><a href="###">IA NR4 - Taxable Canada Pension Plan Benefits</a> - <strong>Original / Amendment / Duplicate / Cancelled</strong><br>
 Statement of Amounts Paid or Credited to Non-Residents of Canada</li>
 <li><a href="###">IA NR4 (OAS) - Old Age Security Payments</a><br>
 Statement of OAS Pension Paid or Credited to Non-Residents of Canada</li>
@@ -195,7 +194,7 @@ Statement of OAS Pension Paid or Credited to Non-Residents of Canada</li>
 
 <h3>Employment Insurance Tax Slips</h3>
 <ul>
-<li><a href="###">T4E - Employment Insurance Benefits</a> - <strong><a href="###">Original / Amendment/ Duplicate</strong></a><br>
+<li><a href="###">T4E - Employment Insurance Benefits</a> - <strong>Original / Amendment/ Duplicate</strong><br>
 Statement of Employment Insurance and Other Benefits</li><br>
 	</ul>
 <p><strong>- or -</strong> depending if there are no tax slips available.</p><br>
