--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Delay-Receiving-OAS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Delay-Receiving-OAS.html
@@ -147,7 +147,6 @@
 </div>
 <section class="container">
 <a class="btn btn-default" href="#" role="button">Featured services</a>
- <a class="btn btn-default" href="#" role="button">Accessibility</a>
  <a class="btn btn-default" href="#" role="button">Help</a>   Signed in as <strong>FIRSTNAME LASTNAME</strong>
 <h1 property="name" id="wb-cont" dir="ltr">OAS/GIS Pension</h1>
   
@@ -172,7 +171,7 @@
 <button type="button" class="btn btn-default">Reset</button>
 <button type="button" class="btn btn-default">Cancel</button>
 	
-<br><br><a href="#">Return to Canada Pension Plan/Old Age Security main menu</a>	<br><br>
+<br><br><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Return to Canada Pension Plan/Old Age Security main menu</a>	<br><br>
 
   
 	
