--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html
@@ -153,7 +153,6 @@
 </div>
 <section class="container">
   <a class="btn btn-default" href="###" role="button">Featured services</a>
-  <a class="btn btn-default" href="###" role="button">Accessibility</a> 
   <a class="btn btn-default" href="###" role="button">Help</a>
 	<p class="text-right">Signed in as <strong>FIRSTNAME LASTNAME</strong></p> </section>
 	
@@ -323,7 +322,7 @@
   	<section>
 
 		<p>Pensions and Old Age Security benefits are paid during the last three days of each month. After Service Canada pays you, it will show in your payment information. Contact us for more information about your pension and benefit amounts. If you receive a Quebec Pension Plan benefit, please contact the Retraite Québec.</p>
-		<p><a href="###">Return to Canada Pension Plan/Old Age Security main menu</a></p>
+		<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Return to Canada Pension Plan/Old Age Security main menu</a></p>
 
 
 
