--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
@@ -146,7 +146,6 @@
 </div>
 <section class="container">
 <a class="btn btn-default" href="#" role="button">Featured services</a>
- <a class="btn btn-default" href="#" role="button">Accessibility</a>
  <a class="btn btn-default" href="#" role="button">Help</a>  <p class="text-right">Signed in as <strong>FIRSTNAME LASTNAME</strong></p>
 <h1 property="name" id="wb-cont" dir="ltr">Request my child-rearing provision</h1>
   
@@ -193,7 +192,7 @@
   <a class="btn btn-default" style="margin:10px;" href="###">Cancel</a><br><br>
   
 
-<a href="###">Return to Canada Pension Plan/Old Age Security</a><br><br>
+<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Return to Canada Pension Plan/Old Age Security</a></p><br><br>
 	
 	
 </section>
