--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
@@ -146,7 +146,6 @@
 </div>
 <section class="container">
 <a class="btn btn-default" href="#" role="button">Featured services</a>
- <a class="btn btn-default" href="#" role="button">Accessibility</a>
  <a class="btn btn-default" href="#" role="button">Help</a>  <p class="text-right">Signed in as <strong>FIRSTNAME LASTNAME</strong></p>
 <h1 property="name" id="wb-cont" dir="ltr">Payment Destination</h1>
   
@@ -307,7 +306,7 @@
 </div>	
 	
 
-<a href="#">Return to Canada Pension Plan/Old Age Security</a><br><br>
+<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Return to Canada Pension Plan/Old Age Security</a><br><br>
 	
 	
 </section>
