--- a/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
@@ -154,7 +154,6 @@
 </div>
 <section class="container">
   <a class="btn btn-default" href="###" role="button">Featured services</a>
-  <a class="btn btn-default" href="###" role="button">Accessibility</a>
 	<a class="btn btn-default" href="###" role="button">Help</a>
 	Signed in as <strong>FIRSTNAME LASTNAME</strong><br></section>
 	
@@ -277,7 +276,7 @@
 					<a class="btn btn-default" href="###">Add</a>
 				</div>
 				
-				<a href="###">Return to Canada Pension Plan/Old Age Security main menu</a>
+				<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Return to Canada Pension Plan/Old Age Security main menu</a></p>
 			
 		</div>
 </div>
