--- a/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-address.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-address.html
@@ -146,7 +146,6 @@
 </div>
 <section class="container">
 <a class="btn btn-default" href="#" role="button">Featured services</a>
- <a class="btn btn-default" href="#" role="button">Accessibility</a>
  <a class="btn btn-default" href="#" role="button">Help</a>   Signed in as <strong>FIRSTNAME LASTNAME</strong>
 <h1 property="name" id="wb-cont" dir="ltr">Address</h1>
   
@@ -223,7 +222,7 @@
 		</section>
 	</div>
 </div>
-<a href="#">Return to Canada Pension Plan/Old Age Security</a><br><br>
+<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Return to Canada Pension Plan/Old Age Security</a></p><br><br>
 	
 	
 </section>
