--- a/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-telephone.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-telephone.html
@@ -147,7 +147,6 @@
 </div>
 <section class="container">
 <a class="btn btn-default" href="#" role="button">Featured services</a>
- <a class="btn btn-default" href="#" role="button">Accessibility</a>
  <a class="btn btn-default" href="#" role="button">Help</a>   Signed in as <strong>FIRSTNAME LASTNAME</strong>
 <h1 property="name" id="wb-cont" dir="ltr">Telephone Number</h1>
   
@@ -225,7 +224,7 @@
 	</div>
 </div>	
 	
-<a href="#">Return to Canada Pension Plan/Old Age Security</a><br><br>
+<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Return to Canada Pension Plan/Old Age Security</a></p><br><br>
 	
 	
 </section>
