--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
@@ -239,6 +239,9 @@
 		</section>
 	</div>
 	
+	
+	<h2>Old Age Security (OAS)</h2>
+
 	<div class="row">
 	<div class="col-md-6">
 		<section class="panel panel-info">
