--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -150,7 +150,7 @@
 <h1 property="name" id="wb-cont" dir="ltr">CPP Earnings and Contributions</h1>
 	<p><strong>Date of Birth: MMM YYYY</strong></p>
   
-<p>Your CPP Earnings and Contributions provide a history of your earnings and contributions to the CPP (and to the Quebec Pension Plan, if you have contributed to both plans).</p>	
+<p>If you work in Canada (except Quebec) and are over the age of 18, you contribute to the Canada Pension Plan (CPP). The table below provides a history of your earnings and contributions to the CPP (and to the Quebec Pension Plan, if you have contributed to both plans).</p>	
 
 <p><strong>Earnings and contributions last updated on DD-MMM-YYYY</strong></p>
   
@@ -260,16 +260,27 @@ B – Below basic exemption  |  M – Maximum  |  P – Post-Retirement benefit 
 </table>
 </div>
 
-
+<p>You make CPP contributions based on pensionable earnings. Contributions start after you earn a set minimum amount (the <strong>year’s basic exemption</strong>), and continue to a set maximum amount (the <strong>year’s maximum pensionable earnings</strong>).</p>
 	
+	<p>You and your employer each contribute equal amounts on your pensionable earnings. If you are self-employed, you pay both the employer and employee amounts.</p>
 	
+	<p>The CPP consists of:</p>
+	<ol>
+	<li>A base or ‘original’ portion (since 1966) that is calculated on earnings between the year’s minimum and maximum amounts of pensionable earnings. The contribution rate is 9.9% (4.95% from the employer and 4.95% from the employee).</li>
+	<li>An enhanced or ‘additional’ portion (since January 2019) that provides a top-up to the base:</li>
+		<ul>
+			<li>The <strong>first additional portion</strong> is calculated on the same range of earnings as the base, and has a contribution rate of 2% (1% from the employer and 1% from the employee). This additional rate is being introduced gradually between 2019 and 2023.</li>
+			<li>The <strong>second additional portion</strong> will introduce a new range of pensionable earnings from the year’s maximum to 14% above that maximum between 2024 and 2025. This new range of earnings will have a new set of contributions with a rate of 8% (4% from the employer and 4% from the employee).</li>
+		</ul>
+	</ol>
 	
 	
 <p><strong>Note:</strong></p>
 <ul>
-<li>If any of this information is incorrect, please send us a correction.</li>
-<li>If you have filed your income tax return, your earnings and contributions for the current year may not yet be posted.</li>
-<li>Request a Statement of Contributions by mail</li><br>
+<li>Contributions and pensionable earnings may not reflect recent enhancements to the CPP. For more information about the CPP, including the recent changes, visit <a href="###">Canada.ca</a>.</li>
+	<li>If any of this information is incorrect, please <a href="###">send us a correction</a>.</li>
+<li>If you have filed your income tax return, your earnings and contributions for the current year may not be reflected yet.</li>
+	<li><a href="###">Request a Statement of Contributions by mail</a></li><br>
 	</ul>
 
 <a href="#">Return to Canada Pension Plan/Old Age Security</a><br><br>
