--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -278,12 +278,13 @@ B – Below basic exemption  |  M – Maximum  |  P – Post-Retirement benefit 
 <p><strong>Note:</strong></p>
 <ul>
 <li>Contributions and pensionable earnings may not reflect recent enhancements to the CPP. For more information about the CPP, including the recent changes, visit <a href="###">Canada.ca</a>.</li>
-	<li>If any of this information is incorrect, please <a href="###">send us a correction</a>.</li>
+	<li>If any of this information is incorrect, please <a href="###">send us your corrections</a>.</li>
 <li>If you have filed your income tax return, your earnings and contributions for the current year may not be reflected yet.</li>
 	<li><a href="###">Request a Statement of Contributions by mail</a></li><br>
 	</ul>
 
-<a href="#">Return to Canada Pension Plan/Old Age Security</a><br><br>
+<a href="###">View your estimated monthly CPP benefits</a><br><br>
+<a href="###">Return to My Service Canada Account home page</a><br><br>
 	
 	
 </section>
