--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html
@@ -321,7 +321,7 @@
  		</details>
   	<section>
 
-		<p>Pensions and Old Age Security benefits are paid during the last three days of each month. After Service Canada pays you, it will show in your payment information. Contact us for more information about your pension and benefit amounts. If you receive a Quebec Pension Plan benefit, please contact the Retraite Québec.</p>
+		<p>Pensions and Old Age Security benefits are paid during the last three days of each month. After Service Canada pays you, it will show in your payment information. <a href="###">Contact us<a href="###"> for more information about your pension and benefit amounts. If you receive a Quebec Pension Plan benefit, please contact the <a href="###">Retraite Québec</a>.</p>
 		<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Return to Canada Pension Plan/Old Age Security main menu</a></p>
 
 
