--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status.html
@@ -161,9 +161,9 @@
 	 	 
 <div class="panel-body">
  	 <ul>
-		 <li>View my application status is a new feature introduced in September 2017. If you had an application that was started prior to this date, you may have to select View my payment information to find additional information on your latest application.
+		 <li>View my application status is a new feature introduced in September 2017. If you had an application that was started prior to this date, you may have to select <a href="###">View my payment information</a> to find additional information on your latest application.
 		 </li>
-		 <li>You can select Help for additional website information.</li>
+		 <li>You can select <a href="###">Help</a> for additional website information.</li>
 	</ul> 
   </div>
 </section> 
