--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
@@ -165,7 +165,7 @@
 	  <a href="###">Completed eForms</a>
   </div>
   <div class="column" width="20" height="20">
-	  <a href="###"MSCA Homepage</a>
+	  <a href="###">MSCA Homepage</a>
   </div>
 </div>
 	  
