--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
@@ -169,6 +169,14 @@
   </div>
 </div>
 	  
+	  
+	  <ol class="visible-xs visible-sm">
+	<li><a href="###">Draft eForms</a></li>
+	<li><a href="###">Completed eForms</a></li>	
+	<li><a href="###">MSCA Homepage</a></li>		
+</ol>	
+	  
+	  
 </div>
 	
 	<section class="panel panel-primary">
