--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
@@ -154,28 +154,40 @@
   <h2><center>Welcome</center></h2>
   <p><center>Today's Date and Year <br>Your last visit was *Date, Year* </center></p>
 	
-  <div class="well well-lg">
+	
+	  <div class="well well-lg">
 	  <h3><bold>Privacy notice statement</bold></h3>
 	   <div class="row">
-
-  <div class="column" width="20" height="20">
-	  <a href="###">Draft eForms</a>
-  </div>
-  <div class="column" width="20" height="20">
-	  <a href="###">Completed eForms</a>
-  </div>
-  <div class="column" width="20" height="20">
-	  <a href="###">MSCA Homepage</a>
-  </div>
-</div>
 	  
-	  
-	  <ol class="visible-xs visible-sm">
-	<li><a href="###">Draft eForms</a></li>
-	<li><a href="###">Completed eForms</a></li>	
-	<li><a href="###">MSCA Homepage</a></li>		
-</ol>	
-	  
+	  <ol class="row list-unstyled text-center">
+<li class="col-sm-4">
+	<div class="row">
+		<div class="col-sm-8 col-sm-offset-2">
+		<a class="center-block" href="###">Draft eForms</a>
+		</div>
+		<div class="col-sm-2">
+		</div>
+	</div>	
+</li>
+<li class="col-sm-4">
+	<div class="row">
+		<div class="col-sm-8 col-sm-offset-2">
+		<a class="center-block" href="###">Completed eForms</a>
+		</div>
+		<div class="col-sm-2">
+		<img class="img-responsive center-block" src="/content/dam/esdc-edsc/images/services/msca-mdsc/msca-u212.png" alt="">
+		</div>
+	</div>	
+</li>	
+<li class="col-sm-4">
+	<div class="row">
+		<div class="col-sm-8 col-sm-offset-2">
+		<a class="center-block" href="###">MSCA Homepage</a>
+		</div>
+	</div>		
+</li>		
+</ol>
+	  	  
 	  
 </div>
 	
