--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
@@ -157,7 +157,7 @@
 	
 	  <div class="well well-lg">
 	  <h3><bold>Privacy notice statement</bold></h3>
-	   <div class="row">
+	   <div class="row" style="float:right">
 	  
 	  <ol class="row list-unstyled text-center">
 <li class="col-sm-4">
