--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
@@ -162,7 +162,7 @@
 	  <ol class="row list-unstyled text-center">
 <li class="col-sm-4">
 	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2">
+		<div class="col-sm-8 col-sm-offset-2" style="margin-bottom:10px;">
 		<a class="center-block" href="###">Draft eForms</a>
 		</div>
 		<div class="col-sm-2">
@@ -171,7 +171,7 @@
 </li>
 <li class="col-sm-4">
 	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2">
+		<div class="col-sm-8 col-sm-offset-2" style="margin-bottom:10px;">
 		<a class="center-block" href="###">Completed eForms</a>
 		</div>
 		<div class="col-sm-2">
@@ -180,7 +180,7 @@
 </li>	
 <li class="col-sm-4">
 	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2">
+		<div class="col-sm-8 col-sm-offset-2" style="margin-bottom:10px;">
 		<a class="center-block" href="###">MSCA Homepage</a>
 		</div>
 	</div>		
@@ -188,7 +188,7 @@
 </ol>
 		  </div>
 	</div>
-	</div> 	  
+	  
 	  
 </div>
 	
