--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
@@ -151,7 +151,7 @@
   <a class="btn btn-default" href="#" role="button">Help</a><br>
   
 
-  <h2><center>Welcome111</center></h2>
+  <h2><center>Welcome</center></h2>
   <p><center>Today's Date and Year <br>Your last visit was *Date, Year* </center></p>
 	
 	
@@ -162,8 +162,8 @@
 	  <ol class="row list-unstyled text-center">
 <li class="col-sm-4">
 	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2" style="margin-bottom:10px;">
-		<a class="center-block" href="###">Draft eForms</a>
+		<div class="col-sm-8 col-sm-offset-2">
+		<a style="margin-bottom:15px;" class="center-block" href="###">Draft eForms</a>
 		</div>
 		<div class="col-sm-2">
 		</div>
@@ -171,8 +171,8 @@
 </li>
 <li class="col-sm-4">
 	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2" style="margin-bottom:10px;">
-		<a class="center-block" href="###">Completed eForms</a>
+		<div class="col-sm-8 col-sm-offset-2">
+		<a style="margin-bottom:15px;" class="center-block" href="###">Completed eForms</a>
 		</div>
 		<div class="col-sm-2">
 		</div>
@@ -180,8 +180,8 @@
 </li>	
 <li class="col-sm-4">
 	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2" style="margin-bottom:10px;">
-		<a class="center-block" href="###">MSCA Homepage</a>
+		<div class="col-sm-8 col-sm-offset-2">
+		<a style="margin-bottom:15px;" class="center-block" href="###">MSCA Homepage</a>
 		</div>
 	</div>		
 </li>		
