--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
@@ -163,7 +163,7 @@
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px;" class="center-block" href="###">Draft eForms</a>
+		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">Draft eForms</a>
 		</div>
 		<div class="col-sm-2">
 		</div>
@@ -172,7 +172,7 @@
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px;" class="center-block" href="###">Completed eForms</a>
+		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">Completed eForms</a>
 		</div>
 		<div class="col-sm-2">
 		</div>
@@ -181,7 +181,7 @@
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px;" class="center-block" href="###">MSCA Homepage</a>
+		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">MSCA Homepage</a>
 		</div>
 	</div>		
 </li>		
@@ -190,7 +190,7 @@
 	</div>
 	</div>
 	
-	  
+	 
 
 	
 	<section class="panel panel-primary">
