--- a/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
@@ -162,7 +162,7 @@
   
   <h1 property="name" id="wb-cont" dir="ltr">View - Consent to communicate information to an authorized person</h1>
  
-    <p>Use this application to name an authorized person (for example: your spouse, a member of your family, a friend or your accountant, etc.) to whom you give consent to communicate on your behalf with Service Canada about your Canada Pension Plan (CPP) benefits or Old Age Security (OAS).</p>
+    <p> <font size="6">Use this application to name an authorized person (for example: your spouse, a member of your family, a friend or your accountant, etc.) to whom you give consent to communicate on your behalf with Service Canada about your Canada Pension Plan (CPP) benefits or Old Age Security (OAS).</p>
     
   <p>This person that you authorize can communicate with Service Canada about your income, your CPP/OAS payments, and your CPP contributions. They can contact Service Canada to report your change of address and telephone number.</p>
   
@@ -179,7 +179,7 @@
   
   <p>If you wish to name an organization, please enter the information of the contact person from the organization or you can contact Service Canada for assistance.</p>
   
-  <p>If Service Canada records show that a legal representative, such as a guardian, curator, committee, lawyer, trustee or a person with a power of attorney is authorized to act for you, we will communicate only with that legal representative.</p>
+  <p>If Service Canada records show that a legal representative, such as a guardian, curator, committee, lawyer, trustee or a person with a power of attorney is authorized to act for you, we will communicate only with that legal representative.</font></p>
   
   <h3>Consent to communicate information for CPP or OAS or both of these pension programs</h3>
 		<div class="row">
