--- a/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
@@ -48,9 +48,7 @@
 </noscript>
 <script type="text/javascript">document.write(wet.builder.refTop({ cdnEnv: "AKAMAI", isApplication: true }))</script>
 <style>
-.modal-footer {
-	background-color: #FFF
-}
+.modal-footer { background-color: #FFF }
 </style>
 </head>
 
