--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -145,7 +145,11 @@
   </header>
 </div>
 <section class="container">
-<a class="btn btn-default" href="#" role="button">Featured services</a> <a class="btn btn-default" href="#" role="button">Frequently Asked Questions</a> <a class="btn btn-default" href="#" role="button">Help</a><br>
+  <a class="btn btn-default" href="#" role="button">Featured services</a>
+	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
+	
+	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
+	
 <h1 property="name" id="wb-cont" dir="ltr">Latest claim status</h1>
 <div class="row">
   <div class="col-xs-12 col-md-3 pull-left">
