--- a/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html
+++ b/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html
@@ -146,6 +146,8 @@
   </header>
 </div>
 <section class="container">
+	
+	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
 	<h1 property="name" id="wb-cont" dir="ltr">View Tax Slips</h1>
   	<p>The "View Tax Slips" page lists your tax slips for the current year and for the past six years. This service displays up to six different types of tax slips:</p>
 	<ul>
