--- a/scenarioA/services/my-account/MSCA/EI/past-claims.html
+++ b/scenarioA/services/my-account/MSCA/EI/past-claims.html
@@ -147,7 +147,9 @@
 </div>
 <section class="container">
   <a class="btn btn-default" href="#" role="button">Featured services</a>
-  <a class="btn btn-default" href="#" role="button">Help</a><br>
+	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
+	
+	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
   <h1 property="name" id="wb-cont" dir="ltr">My Past Claims</h1>
   
   <p>We have no past claim information for you.</p>
