--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -144,7 +144,9 @@
     </nav>
   </header>
 </div>
-<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
+<section class="container">
+	
+	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
   <h1 property="name" id="wb-cont" dir="ltr">Employment Insurance</h1>
   <section class="alert alert-warning">
     <h2 class="h3">Attention</h2>
