--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -144,7 +144,10 @@
     </nav>
   </header>
 </div>
-<section class="container">
+	<section class="container">
+	
+	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
+		
   <h1 property="name" id="wb-cont" dir="ltr">Canada Pension Plan/Old Age Security</h1>
   <section class="alert alert-warning">
     <h2 class="h3">Attention</h2>
