--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-disability.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-disability.html
@@ -146,8 +146,10 @@
   </header>
 </div>
 <section class="container">
-
- <a class="btn btn-default" href="#" role="button">Help</a>   Signed in as <strong>FIRSTNAME LASTNAME</strong>
+  <a class="btn btn-default" href="#" role="button">Featured services</a>
+	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
+	
+	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
 <h1 property="name" id="wb-cont" dir="ltr">Canada Pension Plan - Application for disability benefits</h1>
   
 <p>To recover and continue completing your application, select “Recover application in progress.”</p>
