--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/OAS-GIS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/OAS-GIS.html
@@ -146,8 +146,10 @@
   </header>
 </div>
 <section class="container">
-<a class="btn btn-default" href="#" role="button">Featured services</a>
- <a class="btn btn-default" href="#" role="button">Help</a>   Signed in as <strong>FIRSTNAME LASTNAME</strong>
+  <a class="btn btn-default" href="#" role="button">Featured services</a>
+	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
+	
+	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
 <h1 property="name" id="wb-cont" dir="ltr">Step 1 of 3 - Apply for my Old Age Security (OAS) pension and the Guaranteed Income Supplement (GIS)</h1>
   
 <section class="panel panel-info">
