--- a/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-address.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-address.html
@@ -145,8 +145,10 @@
   </header>
 </div>
 <section class="container">
-<a class="btn btn-default" href="#" role="button">Featured services</a>
- <a class="btn btn-default" href="#" role="button">Help</a>   Signed in as <strong>FIRSTNAME LASTNAME</strong>
+  <a class="btn btn-default" href="#" role="button">Featured services</a>
+	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
+	
+	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
 <h1 property="name" id="wb-cont" dir="ltr">Address</h1>
   
 <p>To view or change your direct deposit, choose <strong>View/Change My Payment Destination</strong> from the My Service Canada Account home page.</p>	
