--- a/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
@@ -149,11 +149,9 @@
       </div>
     </nav>
   </header>
-</div>
-<section class="container">
-  <a class="btn btn-default" href="###" role="button">Featured services</a>
-	<a class="btn btn-default" href="###" role="button">Help</a>
-	Signed in as <strong>FIRSTNAME LASTNAME</strong><br></section>
+</div><section class="container">
+  <a class="btn btn-default" href="#" role="button">Featured services</a>
+	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
 	
 	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
 	
