--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -144,10 +144,14 @@
     </nav>
   </header>
 </div>
-<section class="container">
-<a class="btn btn-default" href="#" role="button">Featured services</a>
- <a class="btn btn-default" href="#" role="button">Help</a>  <p class="text-right">Signed in as <strong>FIRSTNAME LASTNAME</strong></p>
-<h1 property="name" id="wb-cont" dir="ltr">CPP Earnings and Contributions</h1>
+
+	<section class="container">
+  <a class="btn btn-default" href="#" role="button">Featured services</a>
+	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
+	
+	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
+		
+		<h1 property="name" id="wb-cont" dir="ltr">CPP Earnings and Contributions</h1>
 	<p><strong>Date of Birth: MMM YYYY</strong></p>
   
 <p>If you work in Canada (except Quebec) and are over the age of 18, you contribute to the Canada Pension Plan (CPP). The table below provides a history of your earnings and contributions to the CPP (and to the Quebec Pension Plan, if you have contributed to both plans).</p>	
