--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
@@ -145,9 +145,10 @@
   </header>
 </div>
 <section class="container">
-<a class="btn btn-default" href="#" role="button">Featured services</a>
- <a class="btn btn-default" href="#" role="button">Help</a>  <p class="text-right">Signed in as <strong>FIRSTNAME LASTNAME</strong></p>
-
+  <a class="btn btn-default" href="#" role="button">Featured services</a>
+	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
+	
+	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
 <h1 property="name" id="wb-cont" dir="ltr">My child-rearing provision - Confirm information</h1>
   
 <p>Please check the information you entered is accurate, then submit your request.</p>	
