--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html
@@ -152,13 +152,10 @@
   </header>
 </div>
 <section class="container">
-  <a class="btn btn-default" href="###" role="button">Featured services</a>
-  <a class="btn btn-default" href="###" role="button">Help</a>
-	<p class="text-right">Signed in as <strong>FIRSTNAME LASTNAME</strong></p> </section>
+  <a class="btn btn-default" href="#" role="button">Featured services</a>
+	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
 	
 	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
-	
-  
   <h1 property="name" id="wb-cont" dir="ltr">Payment Information</h1>
   <p>You can view your amounts for the last two years for CPP. If you are in receipt of OAS, only your most recent monthly payment is displayed.</p>
   
