--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
@@ -144,9 +144,13 @@
     </nav>
   </header>
 </div>
-<section class="container">
-<a class="btn btn-default" href="#" role="button">Featured services</a>
- <a class="btn btn-default" href="#" role="button">Help</a>  <p class="text-right">Signed in as <strong>FIRSTNAME LASTNAME</strong></p>
+
+	<section class="container">
+  <a class="btn btn-default" href="#" role="button">Featured services</a>
+	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
+	
+	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
+		
 <h1 property="name" id="wb-cont" dir="ltr">Payment Destination</h1>
   
 <p>It can take up to 30 days for direct deposit changes to take effect. In order to ensure your next payment is sent to your new account, please ensure you provide us with your new banking information at least 30 days in advance of your payment date.</p>	
