--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement.html
@@ -145,9 +145,12 @@
     </nav>
   </header>
 </div>
-<section class="container">
-<a class="btn btn-default" href="#" role="button">Featured services</a>
- <a class="btn btn-default" href="#" role="button">Help</a>   Signed in as <strong>FIRSTNAME LASTNAME</strong>
+	<section class="container">
+  <a class="btn btn-default" href="#" role="button">Featured services</a>
+	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
+	
+	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
+		
 <h1 property="name" id="wb-cont" dir="ltr">Step 1 of 3 - Apply for My CPP Retirement</h1>
   
 <div class="alert alert-info">
