--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -163,7 +163,7 @@
         <ul class="list-group">
           <li class="list-group-item"><a href="#a1-1">CPP Application</a></li>
           <li class="list-group-item"><a href="#a1-2">OAS/GIS Pension Application</a></li>
-          <li class="list-group-item"><a href="#a1-3">Personal information</a></li>
+          <li class="list-group-item"><a href="#a1-3">View/Change personal information</a></li>
           <li class="list-group-item"><a href="#a1-4">Payment and direct deposit</a></li>
           <li class="list-group-item"><a href="#a1-5">CPP Contributions and Benefits</a></li>
           <li class="list-group-item"><a href="#a1-6">CPP Child-Rearing Provision</a></li>
