--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -161,7 +161,11 @@
   <br />
 
   <section>
-    <h2 class="mrgn-tp-md">Our services and information</h2>
+    <div class="mrgn-tp-lg header-bg">
+	<h2>Our services</h2>
+	
+	<div class="brdr-bttm-fade"></div>
+</div>
     <div>
 		<a class="col-md-5 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html"><div class="h3 mrgn-tp-md text-center">Employment Insurance</div></a>
 	  </div>
@@ -169,11 +173,16 @@
 			<a class=" col-md-5 col-md-offset-1 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html"><div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div></a> 
 	  </div>
   </section>
+	 <section>
+	<div class="mrgn-tp-lg header-bg">
+	<h2>Our services</h2>
+	
+	<div class="brdr-bttm-fade"></div>
+</div>
 	<div class="row">
   <div class="col-md-5">
     <aside style="padding-top:40px;">
-      <h2>Other services</h2>
-      <section>
+     
 		  <div class="panel panel-default">
   <div class="panel-body">
         <h2 class="h3 mrgn-tp-0">Canada Revenue Agency</h2>
@@ -182,11 +191,11 @@
 
         <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Switch to Canada Revenue Agency</a>
 			  </div>
-		  </div></section>
+		  </div>
     </aside>
   </div>
   </div>
-  </span> 
+ </section> </span> 
                           <script type="text/javascript">var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
 					cdnEnv: "prod",dateModified: "2019-06-29",screenIdentifier: "MSCA M 001",showPostContent: false,
