--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -175,7 +175,7 @@
   </section>
 	 <section>
 	<div class="mrgn-tp-lg header-bg">
-	<h2>Our services</h2>
+	<h2>Our partner(s)</h2>
 	
 	<div class="brdr-bttm-fade"></div>
 </div>
