--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script>
 <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>
 <link href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/static-content/msca-mdsc/css/msca-cdtn.css" rel="stylesheet"/>
-	<link href="http://10.54.203.251/dev/GCWeb/css/theme.min.css" rel="stylesheet"/>
+
 <noscript>
 <!--[if gte IE 9 | !IE ]><!-->
 <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/assets/favicon.ico" rel="icon" type="image/x-icon"/>
@@ -52,6 +52,117 @@
 .modal-footer {
 	background-color: #FFF
 }
+</style>
+	<style type="text/css">
+.orange-bg {
+ background: linear-gradient(#f68b1f, #f89736);
+}
+.blue-bg {
+background-color: #11409F;
+}
+.header-bg {
+	line-height: normal; 
+	background: linear-gradient(to right, #ddd 50%, #fff 75%, #fff); 
+}
+
+.header-bg .brdr-bttm-fade	 {
+	width: 100%;
+	height: 4px;
+	background: linear-gradient(to right, #26374a 50%, #fff 75%, #fff); 
+}
+
+.header-bg h2 {
+	background: linear-gradient(297.5deg, transparent, transparent 25px, white 26px, white 31px, #26374a 32px, #26374a);
+	color: white;
+	display: inline-block;
+	margin: 0px;
+	padding: 5px 30px 5px 15px;
+	min-width: 300px;
+	font-size: 1.3em;
+}
+
+
+	
+	
+	
+	
+	
+	
+	
+	
+	.large-btn {
+		width: 85%;
+		text-align: left;
+	}
+	
+	.large-btn b {
+		display: inline-block;
+		width: 85%;
+		text-align: center;
+	}
+	
+	.large-btn img {
+		display: inline-block;
+		width: 10%;
+		margin-left: 3%;
+	}
+	
+	a.btn-green:hover, a.btn-purple:hover, a.btn-blue:hover {
+		 color: white;
+	}
+	
+	a.btn-green:link, a.btn-green:visited, a.btn-green:hover, a.btn-green:active, a.btn-purple:link, a.btn-purple:visited, a.btn-purple:hover, a.btn-purple:active, a.btn-blue:link, a.btn-blue:visited, a.btn-blue:hover, a.btn-blue:active {
+		 color: white;
+		padding-left: 5px;
+	}
+	
+	a.btn-green {
+		background: #444;
+	}
+	a.btn-green:hover, a.btn-green:active {
+		background: #787878;
+	}
+	
+	
+	a.btn-purple {
+		background: #32002A;
+	}
+	a.btn-purple:hover, a.btn-purple:active {
+		background: #4A0B38;
+	}
+	
+	
+	a.btn-blue:link, a.btn-blue:visited {
+		background: #283a7b;
+	}
+	a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
+		background: #26374a;
+	}
+	/*
+	
+		
+	a.btn-green {
+		background: #000000;
+	}
+	a.btn-green:hover, a.btn-green:active {
+		background: #787878;
+	}
+	
+	
+	a.btn-purple {
+		background: #32002A;
+	}
+	a.btn-purple:hover, a.btn-purple:active {
+		background: #4A0B38;
+	}
+	
+	
+	a.btn-blue {
+		background: #26374a;
+	}
+	a.btn-blue:hover, a.btn-blue:active {
+		background: #26374a;
+	}*/
 </style>
 </head>
 
