--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -262,13 +262,13 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
       </a> </div>
   </section>
+	<br />
   <div class="row">
- 
   <aside style="padding-top:40px;">
   <div class="mrgn-tp-lg header-bg">
     <h2>Our partner(s)</h2>
     <div class="brdr-bttm-fade"></div>
-  </div>  
+  </div>  <br />
 	  <div class="col-md-5">
 		  <section>
     <div class="panel panel-default">
