--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -264,7 +264,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   </section>
 	<br />
   <div class="row">
-  <aside style="padding-top:40px;">
+  <aside style="padding-top:40px; padding-left:40px;">
   <div class="mrgn-tp-lg header-bg">
     <h2>Our partner(s)</h2>
     <div class="brdr-bttm-fade"></div>
@@ -274,7 +274,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <div class="panel panel-default">
       <div class="panel-body">
         <h2 class="h3 mrgn-tp-0">Canada Revenue Agency</h2>
-        <p> Visit your Canada Revenue Agency account to view your income tax information, such as tax returns, tax credits, your account balance, RRSPs, TFSAs and manage your Canada Child Benefits.</p>
+        <p>Visit your Canada Revenue Agency account to view your income tax information, such as tax returns, tax credits, your account balance, RRSPs, TFSAs and manage your Canada Child Benefits.</p>
         <p>No need to log in again.</p>
         <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Switch to Canada Revenue Agency</a> </div>
     </div>
