--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -206,7 +206,10 @@
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-2" class="h3 mrgn-tp-0">Personal information</h2>
-          <p>Personal information services allow you to display the mailing address, telephone number, direct deposit information and preferred language of service that we currently have for you. You can amend your mailing address, telephone number or preferred language of service. You can also register for or amend your direct deposit information. </p>
+          <p>The  Personal information section allows you to view or modify your mailing address,  telephone number, direct deposit information and preferred language of service  currently on file.</p>
+			<details>
+			<summary>Service times for your Province or Territory</summary>
+			<p>Info to be added.</p></details>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone.html';" type="button" class="btn btn-default">Mailing address and telephone number</button>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit.html';" type="button" class="btn btn-default">Direct Deposit (EI)</button>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/language.html';" type="button" class="btn btn-default">Preferred language for written communications</button>
