--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -264,7 +264,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   </section>
 	<br />
   <div class="row">
-  <aside style="padding-top:40px; padding-left:10px;">
+  <aside style="padding-top:40px;">
   <div class="mrgn-tp-lg header-bg">
     <h2>Our partner(s)</h2>
     <div class="brdr-bttm-fade"></div>
