--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -269,7 +269,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <h2>Our partner(s)</h2>
     <div class="brdr-bttm-fade"></div>
   </div>  <br />
-	  <div class="col-md-5">
+	 <!-- <div class="col-md-5">-->
 		  <section>
     <div class="panel panel-default">
       <div class="panel-body">
@@ -279,7 +279,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Switch to Canada Revenue Agency</a> </div>
     </div>
 		  </section>
-	  </div>
+	  <!--</div>-->
+	  
+	  
 	  </aside>
 	</div>
   </span> 
