--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -269,17 +269,18 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <h2>Our partner(s)</h2>
     <div class="brdr-bttm-fade"></div>
   </div>  <br />
-	 <!-- <div class="col-md-5">-->
+	 <!-- <div class="col-md-5">
 		  <section>
     <div class="panel panel-default">
-      <div class="panel-body">
+      <div class="panel-body">-->
         <h2 class="h3 mrgn-tp-0">Canada Revenue Agency</h2>
         <p>Visit your Canada Revenue Agency account to view your income tax information, such as tax returns, tax credits, your account balance, RRSPs, TFSAs and manage your Canada Child Benefits.</p>
         <p>No need to log in again.</p>
-        <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Switch to Canada Revenue Agency</a> </div>
+        <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Switch to Canada Revenue Agency</a> 
+	  <!--</div>
     </div>
 		  </section>
-	  <!--</div>-->
+	  </div>-->
 	  
 	  
 	  </aside>
